# grepper

./: Cargo.toml  dist-workspace.toml
src/: args.rs  error.rs  files.rs  gitignore.rs  grep.rs  lib.rs  main.rs  output.rs  util.rs
testfs/: base.txt
wix/: main.wxs
