[package]
name = "grepper"
version = "1.1.0"
edition = "2024"
authors = ["Marley <marley@marlstar.com>"]
homepage = "https://github.com/Marlstar/grepper"
repository = "https://github.com/Marlstar/grepper"
description = "A grep clone written in rust"
keywords = ["grep", "find", "search"]

[package.metadata.wix]
upgrade-guid = "08B07E83-6E2E-4B89-A262-754AF4C57FD7"
path-guid = "3423E061-46AC-4B2F-A9AA-8E8F9C18CDB1"
license = false
eula = false


[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
colored = "3.0.0"
ignore = "0.4.23"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
